# nekolib

./: README.md  index.md
.github/workflows/: cargo-test.yml  push-to-gh-pages.yml
doc/: search-index.js  settings.html  source-files.js
doc/nekolib_doc/: all.html  index.html  sidebar-items.js
docs/: crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
docs/algo/: all.html  enum.ApproxFrac.html  fn.twosat.html  index.html  struct.FracApproxIter.html  trait.Bisect.html  trait.CycleMuLambda.html  trait.FracApprox.html  trait.SbInt.html
docs/anes/: all.html  enum.Attribute.html  enum.ClearBuffer.html  enum.ClearLine.html  enum.Color.html  index.html  macro.csi.html  macro.esc.html  macro.execute.html  macro.queue.html  macro.sequence.html  macro.sgr.html  struct.DisableCursorBlinking.html  struct.DisableMouseEvents.html  struct.EnableCursorBlinking.html  struct.EnableMouseEvents.html  struct.HideCursor.html  struct.MoveCursorDown.html  struct.MoveCursorLeft.html  (+19 more)
nekolib-doc/: Cargo.toml  Makefile  crates-ls.html  crates-ls.json  crates-ls.sh  crates-ls.vim  katex.html
nekolib-doc/.cargo/: config.toml
nekolib-doc/src/: lib.rs
nekolib-src/: add.zsh  ls.sh  rm.zsh
nekolib-src/algo/: Cargo.toml
nekolib-src/algo/bisect/: Cargo.toml
nekolib-src/algo/bisect/src/: lib.rs
nekolib-src/algo/frac_approx/: Cargo.toml
nekolib-src/algo/frac_approx/src/: lib.rs
nekolib-src/algo/src/: lib.rs
nekolib-src/algo/tortoise_hare/: Cargo.toml
nekolib-src/algo/tortoise_hare/src/: lib.rs
nekolib-src/algo/twosat/: Cargo.toml
nekolib-src/algo/twosat/src/: lib.rs
nekolib-src/discussion/: Cargo.toml
nekolib-src/discussion/decomposable/: Cargo.toml
nekolib-src/discussion/decomposable/src/: lib.rs
nekolib-src/discussion/dp/src/: lib.rs
nekolib-src/discussion/plane-sweep/: Cargo.toml
nekolib-src/discussion/plane-sweep/src/: lib.rs
nekolib-src/discussion/ptr-ds/: Cargo.toml
nekolib-src/discussion/ptr-ds/src/: alias_model.rs  draft.rs  lib.rs  maybe_uninit.rs  rawptr.rs  sample_handle.rs  sample_list.rs  sample_noderef.rs  sb.rs  variance.rs
nekolib-src/discussion/src/: lib.rs
nekolib-src/discussion/std-btree/: Cargo.toml
nekolib-src/discussion/std-btree/.cargo/: config.toml
nekolib-src/discussion/std-btree/src/: append.rs  borrow.rs  dedup_sorted_iter.rs  fix.rs  lib.rs  map.rs  mem.rs  merge_iter.rs  navigate.rs  node.rs  remove.rs  search.rs  set.rs  set_val.rs  split.rs
nekolib-src/discussion/std-btree/src/map/: entry.rs
nekolib-src/ds/: Cargo.toml
nekolib-src/ds/btree_seq/: Cargo.toml
nekolib-src/ds/btree_seq/src/: debug.rs  lib.rs  mem.rs  node.rs  seq.rs  try1.rs
nekolib-src/ds/btree_seq/src/node/: handle.rs  handle_cast.rs  insert.rs  marker.rs  navigate.rs  node_cast.rs  root_node.rs  slice.rs
nekolib-src/ds/btree_seq/src/node/handle/: handle_cast.rs
nekolib-src/ds/fibonacci_heap/: Cargo.toml
nekolib-src/ds/fibonacci_heap/src/: lib.rs
nekolib-src/ds/foldable_deque/: Cargo.toml
nekolib-src/ds/foldable_deque/src/: lib.rs
nekolib-src/ds/foldable_queue/: Cargo.toml
nekolib-src/ds/foldable_queue/src/: lib.rs
nekolib-src/ds/interval_map/: Cargo.toml
nekolib-src/ds/interval_map/src/: lib.rs
nekolib-src/ds/interval_set/: Cargo.toml
nekolib-src/ds/n1_rmq/: Cargo.toml
nekolib-src/ds/n1_rmq/src/: lib.rs
nekolib-src/ds/rs01_dict/: Cargo.toml
nekolib-src/ds/rs01_dict/benches/: bench_selects.rs
nekolib-src/ds/rs01_dict/src/: lib.rs  try1.rs
nekolib-src/ds/sqrt_bucket/: Cargo.toml
nekolib-src/ds/sqrt_bucket/src/: lib.rs
nekolib-src/ds/src/: lib.rs
nekolib-src/ds/union-find/: Cargo.toml
nekolib-src/ds/union-find/src/: lib.rs
nekolib-src/ds/vec_segtree/: Cargo.toml
nekolib-src/ds/vec_segtree/src/: lib.rs
nekolib-src/ds/wavelet_matrix/: Cargo.toml
nekolib-src/ds/wavelet_matrix/src/: lib.rs
nekolib-src/integer/: Cargo.toml
nekolib-src/integer/bin_iter/: Cargo.toml
nekolib-src/integer/bin_iter/src/: lib.rs
nekolib-src/integer/digits_iter/: Cargo.toml
nekolib-src/integer/digits_iter/src/: lib.rs
nekolib-src/integer/pdep_pext/: Cargo.toml
nekolib-src/integer/pdep_pext/src/: lib.rs
nekolib-src/integer/src/: lib.rs
nekolib-src/integer/word_set/: Cargo.toml
nekolib-src/integer/word_set/src/: lib.rs
nekolib-src/math/: Cargo.toml
nekolib-src/math/divisors/: Cargo.toml
nekolib-src/math/divisors/src/: lib.rs
nekolib-src/math/factors/: Cargo.toml
nekolib-src/math/factors/src/: lib.rs
nekolib-src/math/gcd/src/: lib.rs
nekolib-src/math/linear_sieve/: Cargo.toml
nekolib-src/math/linear_sieve/src/: lib.rs
nekolib-src/math/modint/: Cargo.toml
nekolib-src/math/modint/src/: lib.rs
nekolib-src/math/src/: lib.rs
nekolib-src/math/stern_brocot/: Cargo.toml
nekolib-src/math/stern_brocot/src/: lib.rs
nekolib-src/naive/: Cargo.toml
nekolib-src/naive/assoc-list/: Cargo.toml
nekolib-src/naive/assoc-list/src/: lib.rs
nekolib-src/naive/bit-vector/: Cargo.toml
nekolib-src/naive/bit-vector/src/: lib.rs
nekolib-src/naive/concat-monoid/: Cargo.toml
nekolib-src/naive/concat-monoid/src/: lib.rs
nekolib-src/naive/disjoint-set/: Cargo.toml
nekolib-src/naive/disjoint-set/src/: lib.rs
nekolib-src/naive/rs01_dict/src/: lib.rs
nekolib-src/naive/src/: lib.rs
nekolib-src/ops/: Cargo.toml
nekolib-src/ops/monoid/: Cargo.toml
nekolib-src/ops/monoid/src/: lib.rs
nekolib-src/ops/op_add/: Cargo.toml
nekolib-src/ops/op_add/src/: lib.rs
nekolib-src/ops/src/: lib.rs
nekolib-src/ops/usize_bounds/: Cargo.toml
nekolib-src/ops/usize_bounds/src/: lib.rs
nekolib-src/seq/: Cargo.toml
nekolib-src/seq/inversion/src/: lib.rs
nekolib-src/seq/lis/: Cargo.toml
nekolib-src/seq/lis/src/: lib.rs
nekolib-src/seq/majority_vote/: Cargo.toml
nekolib-src/seq/majority_vote/src/: lib.rs
nekolib-src/seq/opmph/: Cargo.toml
nekolib-src/seq/opmph/src/: lib.rs
nekolib-src/seq/src/: lib.rs
nekolib-src/seq/suffix_array/: Cargo.toml
nekolib-src/seq/suffix_array/src/: lib.rs
scripts/: ci-test-format.py  ci-test.jq  ci-test.zsh
user/: Cargo.toml
(+14572 files in other folders)
