[package]
name = "nekolib-doc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foo = { path = "../nekolib-src/foo" }
bar = { path = "../nekolib-src/bar" }
baz = { path = "../nekolib-src/baz" }
macros = { path = "../nekolib-src/macros" }
