[package]
name = "nekolib-doc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "../nekolib-src/macros" }
poc = { path = "../nekolib-src/poc" }
fmt = { path = "../nekolib-src/fmt" }
integer = { path = "../nekolib-src/integer" }
math = { path = "../nekolib-src/math" }
