[package]
name = "nekolib-doc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "../nekolib-src/macros" }
poc = { path = "../nekolib-src/poc" }
fmt = { path = "../nekolib-src/fmt" }
integer = { path = "../nekolib-src/integer" }
math = { path = "../nekolib-src/math" }
ds = { path = "../nekolib-src/ds" }
io = { path = "../nekolib-src/io" }
ops = { path = "../nekolib-src/ops" }
uslice = { path = "../nekolib-src/uslice" }
seq = { path = "../nekolib-src/seq" }
algo = { path = "../nekolib-src/algo" }
naive = { path = "../nekolib-src/naive" }
corro = { path = "../nekolib-src/corro" }
random = { path = "../nekolib-src/random" }
snippet = { path = "../nekolib-src/snippet" }
discussion = { path = "../nekolib-src/discussion" }
graph = { path = "../nekolib-src/graph" }
draft = { path = "../nekolib-src/draft" }
