[package]
name = "algo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inner = { path = "../inner" }
bisect = { path = "bisect" }
tortoise_hare = { path = "tortoise_hare" }
twosat = { path = "twosat" }
