[package]
name = "ds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inner = { path = "../inner" }
union-find = { path = "union-find" }
vec_segtree = { path = "vec_segtree" }
foldable_queue = { path = "foldable_queue" }
foldable_deque = { path = "foldable_deque" }
rs01_dict = { path = "rs01_dict" }
wavelet_matrix = { path = "wavelet_matrix" }
fibonacci_heap = { path = "fibonacci_heap" }
