[package]
name = "math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inner = { path = "../inner" }
modint = { path = "modint" }
linear_sieve = { path = "linear_sieve" }
divisors = { path = "divisors" }
factors = { path = "factors" }
