[package]
name = "naive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inner = { path = "../inner" }
disjoint-set = { path = "disjoint-set" }
assoc-list = { path = "assoc-list" }
concat-monoid = { path = "concat-monoid" }
# rs01_dict = { path = "rs01_dict" }
