[package]
name = "ops"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inner = { path = "../inner" }
monoid = { path = "monoid" }
usize_bounds = { path = "usize_bounds" }
op_add = { path = "op_add" }
