[package]
name = "seq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inner = { path = "../inner" }
inversion = { path = "inversion" }
lis = { path = "lis" }
suffix_array = { path = "suffix_array" }
majority_vote = { path = "majority_vote" }
opmph = { path = "opmph" }
