[package]
name = "btree_seq"
version = "0.1.0"
edition = "2021"

[dependencies]
array_rotation = { path = "../../corro/array_rotation" }
array_insertion = { path = "../../corro/array_insertion" }
array_removal = { path = "../../corro/array_removal" }
usize_bounds = { path = "../../ops/usize_bounds" }
