[package]
name = "rs01_dict"
version = "0.1.0"
edition = "2021"

[dependencies]
usize_bounds = { path = "../../ops/usize_bounds" }

[dev-dependencies]
criterion = "0.5.1"
bit-vector = { path = "../../naive/bit-vector" }
rs01dict_runtime = { path = "../../draft/rs01dict_runtime" }
rand = "0.8.5"
rand_chacha = "0.3.1"

[[bench]]
name = "bench_selects"
harness = false
