[package]
name = "vec_segtree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monoid = { path = "../../ops/monoid" }
usize_bounds = { path = "../../ops/usize_bounds" }

[dev-dependencies]
op_add = { path = "../../ops/op_add" }
